Fix extra space between entry field in the forms in IE6
svn@10652

--- a/web/src/main/webapp/skins/curriki8/style2.css
+++ b/web/src/main/webapp/skins/curriki8/style2.css
@@ -168,7 +168,7 @@ strong { font-weight: bold; }
 
 .curriki-form table.subject-educational th { background-color: transparent; }
 .curriki-form table.subject-educational td { vertical-align: top; }
-.curriki-form span.xwiki-form-listclass { display: block; margin: 3px 0; }
+.curriki-form span.xwiki-form-listclass { display: block; margin: 3px 0 !important; margin: 0 0 2px; }
 form#inline span.xwiki-form-listclass input { margin: 0 2px 0 0; }
 .curriki-form #XWiki\.AssetClass_0_title, #XWiki\.AssetClass_0_description, #XWiki\.AssetClass_0_keywords, #XWiki\.AssetLicenseClass_0_rightsHolder { width: 99% !important; width: 95%; }
 .curriki-form #mce_editor_0 { height: 30em !important; width: 100%  !important; }
